--- a/public/index.css
+++ b/public/index.css
@@ -3,12 +3,12 @@
   padding: 0;
   /* background-color: black; */
 }
-body{
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
 }
-html{
+html {
   width: 100vw;
   background-color: black;
 }
@@ -29,19 +29,21 @@ html{
   color: white;
   background-color: black;
   text-align: center;
-  padding: 0 20%;
-  
+  padding: 0 15% !important;
+  padding-top: 3vw !important;
 }
 
 .abouttext h1 {
   font-size: 2.75rem;
   font-family: technical;
-  
+  letter-spacing: 2px;
+  line-height: 4rem !important;
 }
 
 .abouttext h1 span {
   font-family: technopath;
   font-size: 2.5rem;
+  color: orange;
 }
 
 .abouttext p {
@@ -89,7 +91,7 @@ html{
 }
 
 .subdetails::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 10%;
   bottom: 0;
@@ -130,100 +132,62 @@ span.text {
 
 @media screen and (max-width: 1300px) {
   .details {
-      width: 100vw;
+    width: 100vw;
   }
   .subdetails {
-      height: 26vmin;
-      width: 26vmin;
-      font-size: 12px;
+    height: 26vmin;
+    width: 26vmin;
+    font-size: 12px;
   }
   .abouttext {
-      padding: 0 15%;
+    padding: 0 15%;
   }
   .abouttext h1 {
-      font-size: 2.5rem;
+    font-size: 2.5rem;
   }
 }
 
 @media screen and (max-width: 768px) {
   .details {
-      width: 100vw;
-      flex-wrap: wrap;
-      gap: 30px;
+    width: 100vw;
+    flex-wrap: wrap;
+    gap: 30px;
   }
   .subdetails {
-      width:50vw;
-      height: 30vmin;
-      font-size: 1rem;
+    width: 50vw;
+    height: 30vmin;
+    font-size: 1rem;
   }
   .abouttext {
-      padding: 0 10%;
+    padding: 0 10%;
   }
   .abouttext h1 {
-      font-size: 2.5rem;
+    font-size: 2.5rem;
   }
 }
 
 @media screen and (max-width: 480px) {
   .details {
-      gap: 15px;
+    gap: 15px;
   }
   .subdetails {
-      width: 80%;
-      height: 40vmin;
-      font-size: 10px;
+    width: 80%;
+    height: 40vmin;
+    font-size: 10px;
   }
   .abouttext {
-      padding: 0 5%;
+    padding: 0 5%;
   }
   .abouttext h1 {
-      font-size: 2rem;
+    font-size: 2rem;
   }
   .abouttext h1 span {
-      font-size: 1.75rem;
+    font-size: 1.75rem;
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* *******************************************aboout us***************** */
 /* *****************************************projects */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* *************code */
 .section1 {
@@ -239,7 +203,7 @@ span.text {
       background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(3,37,74,1) 100%, rgba(0,0,0,1) 100%, rgba(0,0,0,1) 100%); */
 }
 
-#landing{
+#landing {
   width: 100%;
   height: 100vh;
   background-image: url("pictures/cybernautsgif.gif");
@@ -281,8 +245,7 @@ span.text {
 }
 
 .nav-link:hover {
-  color: #d246d2 ! important;
-  
+  color: #d246d2 !important;
 }
 
 .navbar-brand {
@@ -328,8 +291,6 @@ html,
   text-decoration: none;
   color: #fff;
 }
-
-
 
 /* ****************** */
 
@@ -743,6 +704,7 @@ html,
   padding: 0;
   width: 100%;
   background-color: #000000;
+  padding-top: 8vw !important;
   /* overflow-y:hidden; */
 }
 .wholegallery {
