--- a/public/index.css
+++ b/public/index.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  position: relative;
 }
 html {
   width: 100vw;
@@ -208,16 +209,24 @@ span.text {
   height: 100vh;
   background-image: url("pictures/cybernautsgif.gif");
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
+  /* background-attachment: fixed; */
+  background-size: 99% 110%;
 }
 
 @font-face {
   font-family: technopath;
   src: url(fonts/Technopath.otf);
 }
+@font-face {
+  font-family: Techno;
+  src: url(fonts/Technopath.otf);
+}
+@font-face {
+  font-family: Techni;
+  src: url(fonts/TechnicalDrawing.ttf);
+}
 
-.navbar {
+/* .navbar {
   width: 100%;
   height: 10%;
   background-color: black;
@@ -250,6 +259,29 @@ span.text {
 
 .navbar-brand {
   font-family: technopath;
+} */
+
+nav {
+  background-color: #000;
+  position: fixed;
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  z-index: 9999;
+}
+nav ul {
+  display: flex;
+  gap: 4.5vw;
+  justify-content: space-evenly;
+}
+nav ul li {
+  font-size: 1.6vw;
+  font-family: Technopath;
+  list-style: none;
+  transition: all 0.5s ease;
+}
+nav ul li:hover {
+  color: #d246d2;
 }
 body,
 html,
@@ -258,7 +290,71 @@ html,
   width: 100%;
   height: 100%;
 }
+.test {
+  height: 100vh;
+  width: 100%;
+  background-color: black;
+  position: relative;
+}
+.main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+  50% {
+    transform: scale(1.05);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+}
 
+.main h1,
+.main img {
+  animation: pulse 2s infinite;
+}
+
+h2 {
+  font-family: Techni;
+  font-weight: 400;
+  font-size: 2.5vw;
+}
+h1 {
+  font-family: Techno;
+  font-weight: 400;
+  font-size: 4vw;
+}
+h1 span img {
+  padding-top: 10px;
+  height: 7vw;
+  width: 13vw;
+
+  /* background-color: red; */
+}
+h1 span {
+  padding-top: 80px;
+  /* color: red; */
+}
+h1 span img {
+  padding-top: 10px; /* Reset padding */
+  height: 7vw;
+  width: 13vw;
+  vertical-align: middle; /* Align image vertically with text */
+}
+
+h1 .idea {
+  vertical-align: middle; /* Ensure the "IDEAS" text aligns with the image */
+}
 #app {
   height: 100vh;
   font-family: technopath;
@@ -802,6 +898,8 @@ html,
   display: flex;
   padding: 2vw 4vw;
   border-bottom: 1px solid rgba(255, 255, 255, 0.333);
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .left {
   /* height: 65%; */
@@ -809,6 +907,7 @@ html,
   background-color: #0f0f0f;
   display: flex;
   padding: 1vw 0;
+  flex-basis: 50%;
 }
 .left h2 {
   font-size: 4.6vw;
@@ -822,6 +921,7 @@ html,
   height: 100%;
   width: 50%;
   background-color: #0f0f0f;
+  flex-basis: 50%;
 }
 .msg h5 {
   color: #9e9e9e;
@@ -1124,6 +1224,19 @@ button.send:active {
 *::selection {
   color: black;
   background-color: white;
+}
+@media only screen and (max-width: 768px) {
+  .left {
+    flex-basis: 100%;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+  .right {
+    flex-basis: 100%;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 /******************************footer********************************* */
